[gd_scene load_steps=10 format=3 uid="uid://bu0p4rcdn5fv3"]

[ext_resource type="Script" path="res://ui/ui.gd" id="1_mkvnc"]
[ext_resource type="PackedScene" uid="uid://kkqdyb8c7vg7" path="res://ui/minimap.tscn" id="2_dydyf"]
[ext_resource type="Texture2D" uid="uid://dv430qpoqgm1i" path="res://assets/buildings/Barracks.png" id="3_lmo4f"]
[ext_resource type="Texture2D" uid="uid://ydfk4co3rxkg" path="res://assets/buildings/Resources.png" id="4_wa78u"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8sg6c"]
bg_color = Color(0, 0, 0, 0.207843)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.245023, 0.958747, 1.15514e-06, 1)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_nfex2"]
size = Vector2(32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_djss6"]
atlas = ExtResource("3_lmo4f")
region = Rect2(0, 0, 16, 16)

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_qjrbp"]
size = Vector2(32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_i5axg"]
atlas = ExtResource("4_wa78u")
region = Rect2(16, 48, 16, 16)

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_mkvnc")

[node name="HUD" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Selector" type="Panel" parent="HUD"]
layout_mode = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_8sg6c")

[node name="WoodLabel" type="Label" parent="HUD"]
layout_mode = 0
offset_left = 942.0
offset_right = 1023.0
offset_bottom = 23.0
text = "Wood: 999"

[node name="GoldLabel" type="Label" parent="HUD"]
layout_mode = 0
offset_left = 1064.0
offset_right = 1136.0
offset_bottom = 23.0
text = "Gold: 999"

[node name="Minimap" parent="HUD" instance=ExtResource("2_dydyf")]
layout_mode = 1

[node name="BuildBar" type="VBoxContainer" parent="HUD"]
custom_minimum_size = Vector2(0, 300)
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -300.0
offset_right = 32.0
grow_vertical = 0

[node name="barracks" type="TextureButton" parent="HUD/BuildBar" groups=["build_buttons"]]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = SubResource("PlaceholderTexture2D_nfex2")

[node name="TextureRect" type="TextureRect" parent="HUD/BuildBar/barracks"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -14.0
offset_top = -14.0
offset_right = 26.0
offset_bottom = 26.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.7, 0.7)
texture = SubResource("AtlasTexture_djss6")

[node name="gold_mine" type="TextureButton" parent="HUD/BuildBar" groups=["build_buttons"]]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = SubResource("PlaceholderTexture2D_qjrbp")

[node name="TextureRect" type="TextureRect" parent="HUD/BuildBar/gold_mine"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -14.0
offset_top = -14.0
offset_right = 26.0
offset_bottom = 26.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.7, 0.7)
texture = SubResource("AtlasTexture_i5axg")

[connection signal="mouse_entered" from="HUD/BuildBar/barracks" to="." method="_on_barracks_mouse_entered"]
[connection signal="mouse_exited" from="HUD/BuildBar/barracks" to="." method="_on_barracks_mouse_exited"]
